# rustmath

./: .gitignore  Cargo.toml  pyproject.toml
src/: lib.rs
