[package]
name = "rustmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustmath"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module", "num-bigint"] }
num-bigint = "0.4.3"
num-traits = "0.2.15"

[profile.release]
opt-level = 3
debug = false